// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Capital letters in story names converted into delimiters 1`] = `
"import { lazy } from \\"react\\";

const capitalization$$blue$tiny$cat = lazy(() => import(\\"../../../tests/fixtures/capitalization.stories.tsx\\").then(module => {
  return {
    default: module.BlueTinyCat
  };
}));
const capitalization$$big$barking$dog = lazy(() => import(\\"../../../tests/fixtures/capitalization.stories.tsx\\").then(module => {
  return {
    default: module.BigBarkingDog
  };
}));

export let stories = {
  \\"capitalization--blue-tiny-cat\\": {
    component: capitalization$$blue$tiny$cat
  },
  \\"capitalization--big-barking-dog\\": {
    component: capitalization$$big$barking$dog
  }
};"
`;

exports[`Capital letters in the filename converted into delimiters 1`] = `
"import { lazy } from \\"react\\";

const filename$capitalization$$test = lazy(() => import(\\"../../../tests/fixtures/filenameCapitalization.stories.tsx\\").then(module => {
  return {
    default: module.Test
  };
}));

export let stories = {
  \\"filename-capitalization--test\\": {
    component: filename$capitalization$$test
  }
};"
`;

exports[`Default title is used instead of the file name 1`] = `
"import { lazy } from \\"react\\";

const title$$cat = lazy(() => import(\\"../../../tests/fixtures/default-title.stories.tsx\\").then(module => {
  return {
    default: module.Cat
  };
}));

export let stories = {
  \\"title--cat\\": {
    component: title$$cat
  }
};"
`;

exports[`Single file with two stories 1`] = `
"import { lazy } from \\"react\\";

const animals$$cat = lazy(() => import(\\"../../../tests/fixtures/animals.stories.tsx\\").then(module => {
  return {
    default: module.Cat
  };
}));
const animals$$dog = lazy(() => import(\\"../../../tests/fixtures/animals.stories.tsx\\").then(module => {
  return {
    default: module.Dog
  };
}));

export let stories = {
  \\"animals--cat\\": {
    component: animals$$cat
  },
  \\"animals--dog\\": {
    component: animals$$dog
  }
};"
`;

exports[`Story name replaces named export as a story name 1`] = `
"import { lazy } from \\"react\\";

const storyname$$doggo = lazy(() => import(\\"../../../tests/fixtures/storyname.stories.tsx\\").then(module => {
  return {
    default: module.Cat
  };
}));
const storyname$$capital$city = lazy(() => import(\\"../../../tests/fixtures/storyname.stories.tsx\\").then(module => {
  return {
    default: module.CapitalCity
  };
}));
const storyname$$champs$élysées = lazy(() => import(\\"../../../tests/fixtures/storyname.stories.tsx\\").then(module => {
  return {
    default: module.CapitalReplaced
  };
}));

export let stories = {
  \\"storyname--doggo\\": {
    component: storyname$$doggo
  },
  \\"storyname--capital-city\\": {
    component: storyname$$capital$city
  },
  \\"storyname--champs-\\\\xE9lys\\\\xE9es\\": {
    component: storyname$$champs$élysées
  }
};"
`;

exports[`Turn file name delimiters into spaces and levels correctly 1`] = `
"import { lazy } from \\"react\\";

const our$animals$$mammals$$cat = lazy(() => import(\\"../../../tests/fixtures/our-animals--mammals.stories.tsx\\").then(module => {
  return {
    default: module.Cat
  };
}));

export let stories = {
  \\"our-animals--mammals--cat\\": {
    component: our$animals$$mammals$$cat
  }
};"
`;
